# SO_Fat16

./: CMakeLists.txt  file_reader.c  file_reader.h  main.c  makefile  tested_declarations.h  unit_test_v2.c
